--- a/examples.css
+++ b/examples.css
@@ -63,6 +63,12 @@ td {
     border-radius: 20px;
 }
 
+.slide li {
+    font-size: 3em;
+    text-align: center;
+    list-style-type: none;
+}
+
 .headerlogo {
     height: 15vh;
     width: 30vh;
@@ -76,11 +82,6 @@ td {
 .cartoon {
     width: 35em;
     height: auto;
-    border-radius: 20px;
-    align: center;
-}
-
-img {
     border-radius: 20px;
 }
 
@@ -175,7 +176,7 @@ h2 {
 }
 
 p {
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .intro p {
