Remove double Angular slide. Add Vragen slide.

--- a/examples.css
+++ b/examples.css
@@ -176,7 +176,7 @@ acronym {
 
 body {
     font-family: arial, helvetica;
-    color: #333;
+    color: #BDBDBD;
     color: rgba(0, 0, 0, 0.5);
 }
 
