--- a/examples.css
+++ b/examples.css
@@ -48,13 +48,12 @@ td {
 .intro p {
     width: 50%;
     margin: 2px;
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
-p {
-    color: white;
+p{
+    font-size: 3em;
 }
-
 .foto {
     height: 70vh;
     position: center center;
@@ -83,12 +82,11 @@ p {
     font-size: 3em;
     text-align: center;
     list-style-type: none;
-    color: white;
 }
 
 .headerlogo {
-    height: 15vh;
     width: 30vh;
+    border-radius: 20px;
 }
 
 #scrumitlogo {
